--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   google_fonts: ^1.1.1
+  email_validator: '^1.0.6'
+  fluttertoast: ^8.0.3
+  
 
 
 dev_dependencies:
@@ -48,7 +51,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - Asset/
+    - assets/
   
 
   # An image asset can refer to one or more resolution-specific "variants", see
