--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   email_validator: '^1.0.6'
   fluttertoast: ^8.0.3
   fab_circular_menu: ^1.0.0
+  file_picker: ^3.0.3
+  dio: ^3.0.9
   
 
 
