--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   dio: ^3.0.9
   mime: ^1.0.0
   path_provider: ^2.0.2
+  downloads_path_provider_28: ^0.1.2
+  permission_handler: ^8.1.4+2
+  simple_permissions: ^0.1.9
   
 
 
