--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,8 +38,9 @@ dependencies:
   path_provider: ^2.0.2
   downloads_path_provider_28: ^0.1.2
   permission_handler: ^8.1.4+2
-  simple_permissions: ^0.1.9
-  
+  pdf: ^3.5.0
+  image: ^3.0.2
+  pdf_render: ^1.0.12
 
 
 dev_dependencies:
