--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,14 +73,10 @@ flutter:
   fonts:
     - family: Roboto
       fonts:
-        - asset: fonts/Roboto-Regular400.ttf
-        - asset: fonts/Roboto-Italic.ttf
-          style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+        - asset: fonts/Roboto-Regular.ttf
+    - family: PT Serif
+      fonts:
+        - asset: fonts/PTSerif-Bold.ttf
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
