--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,7 @@ dependencies:
   permission_handler: ^8.1.4+2
   pdf: ^3.5.0
   image: ^3.0.2
-  pdf_render: ^1.0.12
+  # pdf_render: ^1.0.12
 
 
 dev_dependencies:
