--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,10 @@ dependencies:
   pdf: ^3.5.0
   image: ^3.0.2
   flutter_pdfview: ^1.2.1
-  flutter_full_pdf_viewer: ^1.0.6
+  syncfusion_flutter_pdf: ^19.2.59-beta
+  # syncfusion_flutter_pdfviewer: ^19.2.59-beta
+  # flutter_pdfview: ^1.2.1
+  # flutter_full_pdf_viewer: ^1.0.6
   # advance_pdf_viewer: ^2.0.0
   # pdf_render: ^1.0.12
 
