--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   permission_handler: ^8.1.4+2
   pdf: ^3.5.0
   image: ^3.0.2
+  flutter_spinkit: ^5.1.0
+  modal_progress_hud: ^0.1.3
   flutter_pdfview: ^1.2.1
   syncfusion_flutter_pdf: ^19.2.59-beta
   # syncfusion_flutter_pdfviewer: ^19.2.59-beta
